--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.org"
+baseURL = "https://wzskqjh.com"
 languageCode = 'en-us' #博客使用的语言
 title = 'byuN is the best' #博客的标题 
 theme = "ananke"
